# jyg

./: .eslintrc.js  .gitignore  .npmignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  dodo.py  package.json  pyproject.toml  tsconfig.eslint.json  tsconfig.json  webpack.config.js
.binder/: environment.yml
.github/ISSUE_TEMPLATE/: bug_report.md  release.md
.github/conda.recipe/: meta.yaml
.github/reqs/: environment-base.yml  environment-boa.yml  environment-build.yml  environment-docs.yml  environment-lint.yml  environment-test.yml  requirements-build.txt
.github/workflows/: ci.yml  pages.yml  rtd.yml
atest/fixtures/: jupyter_config.json  jupyterlab-config.json  notebook-config.json
atest/fixtures/user-settings/@deathbeds/jyg/: boards.jupyterlab-settings
atest/fixtures/user-settings/@jupyterlab/apputils-extension/: palette.jupyterlab-settings
atest/resources/: Boards.resource  CLI.resource  Commands.resource  Coverage.resource  LabSelectors.resource  Variables.resource
atest/suites/: __init__.robot
atest/suites/lab/: 00-smoke.robot  01-cli.robot  02-boards.robot  __init__.robot
docs/: api.md  boards.md  cli.md  conf.py  demo.md  dictionary.txt  index.md  roadmap.md
docs/boards/: index.md
docs/schema/: board.rst  index.md  message.rst  msg.rst  window-proxy.rst
examples/: Boards.ipynb  README.ipynb  jupyter-lite.json  jupyter_lite_config.json  overrides.json
js/: _boards.ts  _msgV0.ts  _windowProxy.ts  boards.ts  icons.ts  index.ts  manager.ts  plugin.ts  tokens.ts  tsconfig.cov.json  tsconfig.json  typings.d.ts
js/sources/: _base.ts  iframe.ts  server.ts  websocket.ts  window-proxy.ts
pages-lite/: README.ipynb  jupyter-lite.json  jupyter_lite_config.json  overrides.json
schema/: boards.json  plugin.json  window-proxy.json
scripts/: postschema2typeddict.py  schema2typeddict.py
src/jyg/: __init__.py  __main__.py  _version.py  constants.py  handlers.py  jygapp.py  manager.py  serverextension.py  utils.py
src/jyg/_d/etc/jupyter/jupyter_notebook_config.d/: jupyter-server-proxy.json  jyg.json
src/jyg/_d/etc/jupyter/jupyter_server_config.d/: jyg.json
src/jyg/schema/: __init__.py  jyg-msg.v0.schema.json  msg_v0.py
src/jyg/tests/: __init__.py  conftest.py  test_cli.py  test_metadata.py  test_parse.py
style/: board.html  index.css
